formulas for FT2D and names for exercise functions for triang systems

--- a/Content/fourier_2D.ipynb
+++ b/Content/fourier_2D.ipynb
@@ -53,6 +53,143 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq53'></a>\n",
+    "\n",
+    "$$\n",
+    "x_{j} = j \\, \\Delta x \\: , \\quad j = 0, \\dots, M-1 \\tag{53}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq54'></a>\n",
+    "\n",
+    "$$\n",
+    "y_{k} = k \\, \\Delta y \\: , \\quad k = 0, \\dots, N-1 \\tag{54}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq55'></a>\n",
+    "\n",
+    "$$\n",
+    "u_{m} = \\frac{m}{M \\, \\Delta x} \\: , \\quad m = -\\frac{M}{2}, \\dots, \\frac{M}{2} - 1 \\tag{55}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq56'></a>\n",
+    "\n",
+    "$$\n",
+    "v_{n} = \\frac{n}{N \\, \\Delta y} \\: , \\quad n = -\\frac{N}{2}, \\dots, \\frac{N}{2} - 1 \\tag{56}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq57a'></a>\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "G(u_{m}, v_{n}) \n",
+    "&\\approx \\sum\\limits_{j=0}^{M-1}\\sum\\limits_{k=0}^{N-1} g(x_{j},y_{k})e^{- i 2 \\pi (u_{m}x_{j} + v_{n}y_{k})} \n",
+    "\\Delta x \\Delta y \\\\\n",
+    "&\\approx \\Delta x \\Delta y \\sum\\limits_{j=0}^{M-1}\\sum\\limits_{k=0}^{N-1} g(x_{j},y_{k}) \n",
+    "e^{- i 2 \\pi (\\frac{m j}{M} + \\frac{n k}{N})} \\\\\n",
+    "&\\approx \\Delta x \\Delta y \\sum\\limits_{j=0}^{M-1}\\sum\\limits_{k=0}^{N-1} g_{jk} \n",
+    "e^{- i 2 \\pi m j / M} e^{- i 2 \\pi n k / N} \\\\\n",
+    "\\end{split} \\tag{57a}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq57b'></a>\n",
+    "\n",
+    "$$\n",
+    "G_{mn} = \\sum\\limits_{j=0}^{M-1}\\sum\\limits_{k=0}^{N-1} g_{jk} e^{- i 2 \\pi m j / M} e^{- i 2 \\pi n k / N} \\tag{57b}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $G_{mn} \\equiv \\frac{G(u_{m}, v_{n})}{\\Delta x \\Delta y}$ ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq58'></a>\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{G} = \\mathbf{W}_{M} \\, \\mathbf{g} \\, \\mathbf{W}_{N} \\tag{58}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq59a'></a>\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "g_{jk} \n",
+    "&\\approx \\sum\\limits_{m=-\\frac{M}{2}}^{\\frac{M}{2}-1}\\sum\\limits_{n=-\\frac{N}{2}}^{\\frac{N}{2}-1} \n",
+    "G(u_{m},v_{n}) e^{i 2 \\pi (u_{m}x_{j} + v_{n}y_{k})} \n",
+    "\\frac{1}{M \\, \\Delta x} \\frac{1}{N \\, \\Delta y} \\\\\n",
+    "&\\approx \\frac{1}{M \\, N} \\sum\\limits_{m=-\\frac{M}{2}}^{\\frac{M}{2}-1}\\sum\\limits_{n=-\\frac{N}{2}}^{\\frac{N}{2}-1} \n",
+    "\\frac{G(u_{m},v_{n})}{\\Delta x \\, \\Delta y}\n",
+    "e^{i 2 \\pi (\\frac{m j}{M} + \\frac{n k}{N})} \\\\\n",
+    "&\\approx \\frac{1}{M \\, N} \\sum\\limits_{m=-\\frac{M}{2}}^{\\frac{M}{2}-1}\\sum\\limits_{n=-\\frac{N}{2}}^{\\frac{N}{2}-1} \n",
+    "G_{mn} \\, e^{i 2 \\pi m j / M} e^{i 2 \\pi n k / N} \\\\\n",
+    "\\end{split} \\tag{59a}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq59b'></a>\n",
+    "\n",
+    "$$\n",
+    "g_{jk} \\approx \\frac{1}{M \\, N}\\sum\\limits_{m=0}^{M-1}\\sum\\limits_{n=0}^{N-1} \n",
+    "G_{mn} \\, e^{i 2 \\pi m j / M} e^{i 2 \\pi n k / N} \n",
+    "\\tag{59b}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq60'></a>\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{g} = \\frac{1}{M \\, N} \\tilde{\\mathbf{W}}_{M} \\, \\mathbf{G} \\, \\tilde{\\mathbf{W}}_{N} \\tag{60}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
