--- a/Content/triangular_systems.ipynb
+++ b/Content/triangular_systems.ipynb
@@ -109,9 +109,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) In your `my_functions.py` file, create a function that solves the linear system `Ax = y`, where `A` is an UPPER triangular matrix. The function must receive the matrix `A` and the vector `y` and return the computed vector `x`.\n",
+    "1) In your `my_functions.py` file, create a function called `triu_system` that solves the linear system `Ax = y`, where `A` is an UPPER triangular matrix. The function must receive the matrix `A` and the vector `y` and return the computed vector `x`.\n",
     "\n",
-    "2) In your `test_my_functions.py` file, create two tests. In the first test, create an UPPER triangular matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use `A0` and `y0` to compute a vector `x` with the function created in item 1. Finally, compare the computed vector `x` and the expected vector `x0`. In the second test, compare the result produced by the function created in item 1 and the result produced by the [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html) (see the example presented below), given the same input."
+    "2) In your `test_my_functions.py` file, create two tests. In the first test, create an UPPER triangular matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use `A0` and `y0` to compute a vector `x` with the function `triu_system`. Finally, compare the computed vector `x` and the expected vector `x0`. In the second test, compare the result produced by `triu_system` and the result produced by the [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html) (see the example presented below), given the same input."
    ]
   },
   {
@@ -125,9 +125,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3) In your `my_functions.py` file, create a function that solves the linear system `Ax = y`, where `A` is an LOWER triangular matrix. The function must receive the matrix `A` and the vector `y` and return the computed vector `x`.\n",
+    "3) In your `my_functions.py` file, create a function called `tril_system` that solves the linear system `Ax = y`, where `A` is an LOWER triangular matrix. The function must receive the matrix `A` and the vector `y` and return the computed vector `x`.\n",
     "\n",
-    "4) In your `test_my_functions.py` file, create two tests. In the first test, create a LOWER triangular matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use `A0` and `y0` to compute a vector `x` with the function created in item 3. Finally, compare the computed vector `x` and the expected vector `x0`. In the second test, compare the result produced by the function created in item 3 and the result produced by the [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html) (see the example presented below), given the same input."
+    "4) In your `test_my_functions.py` file, create two tests. In the first test, create a LOWER triangular matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use `A0` and `y0` to compute a vector `x` with the function `tril_system`. Finally, compare the computed vector `x` and the expected vector `x0`. In the second test, compare the result produced by `tril_system` and the result produced by the [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html) (see the example presented below), given the same input."
    ]
   },
   {
@@ -288,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='vsp_sketch.png', width=600>"
+    "<img src='vsp_sketch.png' width=600>"
    ]
   },
   {
@@ -329,8 +329,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. In your `my_functions.py` file, create a function for solving the linear system $\\mathbf{M} \\mathbf{s} = \\mathbf{t}$. The function must receive $\\Delta z_{0}$, $\\Delta z$, and $\\mathbf{t}$ and return the slowness vector $\\mathbf{s}$. The function cannot create the matrix $\\mathbf{M}$ but use only the variables $\\Delta z_{0}$ and $\\Delta z$. To do it, modify one of the algorithms presented above for solving triangular systems.\n",
-    "2. In your `test_my_functions.py` file, create one test. In this test, create a slowness vector $\\mathbf{s}_{0}$ and the triangular matrix $\\mathbf{M}$. After that, compute a data vector $\\mathbf{t}_{0}$ by using $\\mathbf{M}$ and $\\mathbf{s}_{0}$. Then, use $\\mathbf{M}$ and $\\mathbf{t}_{0}$ to estimate a slowness vector $\\mathbf{s}$ by using the function created in item 1. Finally, compare the estimated slowness vector $\\mathbf{s}$ and the true slowness vector $\\mathbf{s}_{0}$."
+    "1. In your `my_functions.py` file, create a function called `vsp` for solving the linear system $\\mathbf{M} \\mathbf{s} = \\mathbf{t}$. The function must receive $\\Delta z_{0}$, $\\Delta z$, and $\\mathbf{t}$ and return the slowness vector $\\mathbf{s}$. The function cannot create the matrix $\\mathbf{M}$, but use only the variables $\\Delta z_{0}$ and $\\Delta z$. To do it, modify one of the algorithms presented above for solving triangular systems.\n",
+    "2. In your `test_my_functions.py` file, create one test. In this test, specify values for $\\Delta z_{0}$ and $\\Delta z$ and create a slowness vector $\\mathbf{s}_{0}$. By using $\\Delta z_{0}$ and $\\Delta z$, create the triangular matrix $\\mathbf{M}$. After that, compute a data vector $\\mathbf{t}_{0}$ by using $\\mathbf{M}$ and $\\mathbf{s}_{0}$. Then, use $\\Delta z_{0}$, $\\Delta z$ and $\\mathbf{t}_{0}$ to estimate a slowness vector $\\mathbf{s}$ by using the function `vsp`. Finally, compare the estimated slowness vector $\\mathbf{s}$ and the true slowness vector $\\mathbf{s}_{0}$."
    ]
   },
   {
@@ -345,21 +345,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
