--- a/Content/fourier_1D_4.ipynb
+++ b/Content/fourier_1D_4.ipynb
@@ -542,7 +542,7 @@
     "<a id='eq50'></a>\n",
     "\n",
     "$$\n",
-    "\\mathbf{g} = \\frac{1}{N} \\, \\mathbf{W}^{H} \\, \\mathbf{G} \\quad, \\tag{50}\n",
+    "\\mathbf{g} = \\frac{1}{N} \\, \\mathbf{W}^{H}_{N} \\, \\mathbf{G} \\quad, \\tag{50}\n",
     "$$"
    ]
   },
