exercise of FT2D

--- a/Content/fourier_2D.ipynb
+++ b/Content/fourier_2D.ipynb
@@ -190,6 +190,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. In your `my_function.py` file, create a function called `fft2D`. The function must receive the data matrix $\\mathbf{g}$ and return its Discrete Fourier Transform $\\mathbf{G}$. This function must create the DFT matrices $\\mathbf{W}_{M}$ and $\\mathbf{W}_{N}$ (equations [58](#eq58) and [60](#eq60)) by using your function `DFT_matrix` (see the notebook `fourier_1D_4`) and must compute the matrix-matrix product by using your function `matmat_complex` (see the notebook `block_matrix.ipynb`).\n",
+    "2. In your file `test_my_function.py`, create one test for the function `fft2D`. This test must compare the result produced by `fft2D` and the result produced by the routine [`scipy.fftpack.fft2`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fftpack.fft2.html).\n",
+    "3. In your `my_function.py` file, create a function called `ifft2D`. The function must receive the complex matrix $\\mathbf{G}$ and return its Discrete Inverse Fourier Transform $\\mathbf{g}$. This function must create the DFT matrices $\\mathbf{W}_{M}$ and $\\mathbf{W}_{N}$ (equations [58](#eq58) and [60](#eq60)) by using your function `DFT_matrix` (see the notebook `fourier_1D_4`) and must compute the matrix-matrix product by using your function `matmat_complex` (see the notebook `block_matrix.ipynb`). Use the function [`numpy.conjugate`](https://numpy.org/devdocs/reference/generated/numpy.matrix.conjugate.html) to compute the required conjugated matrices.\n",
+    "4. In your file `test_my_function.py`, create one test for the function `ifft2D`. This test must compare the result produced by `ifft2D` and the result produced by the routine [`scipy.fftpack.ifft2`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fftpack.ifft2.html)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
