review gaussian elimination

--- a/Content/gauss-elim-intro.ipynb
+++ b/Content/gauss-elim-intro.ipynb
@@ -55,7 +55,7 @@
     "\\vdots \\\\\n",
     "y_{N}\n",
     "\\end{array}\n",
-    "\\right]_{\\,  \\times 1}$$"
+    "\\right]_{\\, N \\times 1}$$"
    ]
   },
   {
@@ -638,7 +638,7 @@
     "In this case, the $\\mathbf{T}$ can be defined as follows:\n",
     "\n",
     "$$\n",
-    "\\mathbf{T} = \\mathbf{I} + \\mathbf{t} \\otimes \\mathbf{u}^{\\top} \\: ,\n",
+    "\\mathbf{T} = \\mathbf{I} + \\mathbf{t} \\cdot \\mathbf{u}^{\\top} \\: ,\n",
     "$$"
    ]
   },
