--- a/Content/gauss-elim-outer.ipynb
+++ b/Content/gauss-elim-outer.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This code shows how the [Gaussian elimination](https://en.wikipedia.org/wiki/Gaussian_elimination) iteratively transforms an unstructured linear system `Ax = y` into an equivalent triangular system `Bx = z` having the same solution `x`."
+    "This notebook shows how the [Gaussian elimination](https://en.wikipedia.org/wiki/Gaussian_elimination) iteratively transforms an unstructured linear system `Ax = y` into an equivalent triangular system `Bx = z` having the same solution `x`."
    ]
   },
   {
@@ -138,11 +138,11 @@
    "metadata": {},
    "source": [
     "1. Calculate the factor $t^{(1)}_{2} = \\frac{a_{21}}{a_{11}}$\n",
-    "2. Multiply the first row of $\\mathbf{A}$ by the factor $t^{(1)}_{2}$ and substract the result from the second row of $\\mathbf{A}$\n",
-    "3. Multiply the first element of $\\mathbf{y}$ by the factor $t^{(1)}_{2}$ and substract the result from the second element of $\\mathbf{y}$\n",
+    "2. Multiply the first row of $\\mathbf{A}$ by the factor $t^{(1)}_{2}$ and subtract the result from the second row of $\\mathbf{A}$\n",
+    "3. Multiply the first element of $\\mathbf{y}$ by the factor $t^{(1)}_{2}$ and subtract the result from the second element of $\\mathbf{y}$\n",
     "4. Calculate the factor $t^{(1)}_{3} = \\frac{a_{31}}{a_{11}}$\n",
-    "5. Multiply the first row of $\\mathbf{A}$ by the factor $t^{(1)}_{3}$ and substract the result from the third row of $\\mathbf{A}$\n",
-    "6. Multiply the first element of $\\mathbf{y}$ by the factor $t^{(1)}_{3}$ and substract the result from the third element of $\\mathbf{y}$"
+    "5. Multiply the first row of $\\mathbf{A}$ by the factor $t^{(1)}_{3}$ and subtract the result from the third row of $\\mathbf{A}$\n",
+    "6. Multiply the first element of $\\mathbf{y}$ by the factor $t^{(1)}_{3}$ and subtract the result from the third element of $\\mathbf{y}$"
    ]
   },
   {
@@ -253,8 +253,8 @@
    "metadata": {},
    "source": [
     "1. Calculate the factor $t^{(2)}_{3} = \\frac{a_{32}^{(1)}}{a_{22}^{(1)}}$\n",
-    "2. Multiply the second row of $\\mathbf{A}^{(1)}$ by the factor $t^{(2)}_{3}$ and substract the result from the third row of $\\mathbf{A}^{(1)}$\n",
-    "3. Multiply the second element of $\\mathbf{y}^{(1)}$ by the factor $t^{(2)}_{3}$ and substract the result from the third element of $\\mathbf{y}^{(1)}$"
+    "2. Multiply the second row of $\\mathbf{A}^{(1)}$ by the factor $t^{(2)}_{3}$ and subtract the result from the third row of $\\mathbf{A}^{(1)}$\n",
+    "3. Multiply the second element of $\\mathbf{y}^{(1)}$ by the factor $t^{(2)}_{3}$ and subtract the result from the third element of $\\mathbf{y}^{(1)}$"
    ]
   },
   {
@@ -376,13 +376,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](http://www.theoilersrig.com/wp-content/uploads/2015/03/surprise.jpg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Specifically, our equivalent triangular system was iteratively calculated according to the following algorithm:"
    ]
   },
@@ -411,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mathbf{M}^{(k)} = \\mathbf{t}^{(k)} \\otimes (\\mathbf{u}^{(k)})^{\\top} \\: ,$$"
+    "$$\\mathbf{M}^{(k)} = \\mathbf{t}^{(k)} \\cdot (\\mathbf{u}^{(k)})^{\\top} \\: ,$$"
    ]
   },
   {
