--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -551,8 +551,8 @@
     "\\begin{split}\n",
     "\\mathbf{C}^{(k)} &= \\left( \\mathbf{I} - \\mathbf{M}^{(k)} \\right) \\tilde{\\mathbf{C}}^{(k-1)} \\\\\\\\\n",
     "&= \\tilde{\\mathbf{C}}^{(k-1)} - \\mathbf{M}^{(k)}\\tilde{\\mathbf{C}}^{(k-1)} \\\\\\\\\n",
-    "&= \\tilde{\\mathbf{C}}^{(k-1)} - \\mathbf{t}^{(k)} \\otimes \\left(\\mathbf{u}^{(k)}\\right)^{\\top}\\tilde{\\mathbf{C}}^{(k-1)} \\\\\\\\\n",
-    "&= \\tilde{\\mathbf{C}}^{(k-1)} - \\mathbf{t}^{(k)} \\otimes \\tilde{\\mathbf{C}}^{(k-1)}\n",
+    "&= \\tilde{\\mathbf{C}}^{(k-1)} - \\mathbf{t}^{(k)} \\cdot \\left(\\mathbf{u}^{(k)}\\right)^{\\top}\\tilde{\\mathbf{C}}^{(k-1)} \\\\\\\\\n",
+    "&= \\tilde{\\mathbf{C}}^{(k-1)} - \\mathbf{t}^{(k)} \\cdot \\tilde{\\mathbf{C}}^{(k-1)}\n",
     "\\left[ \\, k \\, , \\, : \\, \\right]\n",
     "\\end{split}\n",
     "$$"
@@ -562,7 +562,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We know that the subtraction of the outer product $\\mathbf{t}^{(k)} \\otimes \\tilde{\\mathbf{C}}^{(k-1)}\\left[ \\, k \\, , \\, : \\, \\right]$ from the matrix $\\mathbf{C}^{(k-1)}$ produces $\\mathbf{C}^{(k)}\\left[ \\, i+1 \\, , \\, i \\, \\right] = 0$. Besides, \n",
+    "We know that the subtraction of the outer product $\\mathbf{t}^{(k)} \\cdot \\tilde{\\mathbf{C}}^{(k-1)}\\left[ \\, k \\, , \\, : \\, \\right]$ from the matrix $\\mathbf{C}^{(k-1)}$ produces $\\mathbf{C}^{(k)}\\left[ \\, i+1 \\, , \\, i \\, \\right] = 0$. Besides, \n",
     "notice that $\\mathbf{t}^{(k)} \\left[ \\, : k\\right] = 0$. Consequently, the outer product affects only the elements $\\left[ \\, k+1 : \\, ,  \\, k+1 : \\, \\right]$ of the matrix $\\mathbf{C}^{(k)}$. Then, we may simplify the computations as follows:"
    ]
   },
@@ -573,7 +573,7 @@
     "$$\n",
     "\\mathbf{C}^{(k)} \\left[ \\, k+1 : \\, ,  \\, k+1 : \\, \\right] = \n",
     "\\tilde{\\mathbf{C}}^{(k-1)} \\left[ \\, k+1 : \\, ,  \\, k+1 : \\, \\right] - \n",
-    "\\mathbf{t}^{(k)} \\left[ \\, k+1 : \\, \\right] \\otimes \n",
+    "\\mathbf{t}^{(k)} \\left[ \\, k+1 : \\, \\right] \\cdot \n",
     "\\tilde{\\mathbf{C}}^{(k-1)}\n",
     "\\left[ \\, k \\, , \\, k+1 : \\, \\right]\n",
     "$$"
@@ -610,7 +610,7 @@
     "$$\n",
     "\\mathbf{C}^{(k)} \\left[ \\, k+1 : \\, ,  \\, k+1 : \\, \\right] = \n",
     "\\tilde{\\mathbf{C}}^{(k-1)} \\left[ \\, k+1 : \\, ,  \\, k+1 : \\, \\right] - \n",
-    "\\tilde{\\mathbf{C}}^{(k-1)} \\left[ \\, k+1 : \\, ,  \\, k \\, \\right] \\otimes \n",
+    "\\tilde{\\mathbf{C}}^{(k-1)} \\left[ \\, k+1 : \\, ,  \\, k \\, \\right] \\cdot \n",
     "\\tilde{\\mathbf{C}}^{(k-1)}\n",
     "\\left[ \\, k \\, , \\, k+1 : \\, \\right]\n",
     "$$"
@@ -679,11 +679,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) In your `my_functions.py` file, create a function that implement the algorithm shown above. Note that the algorithm shown above uses the function `permut`, receives the matrix `A` and the vector `y` and return two numpy arrays containing the equivalent triangular system, as well as the Gauss multipliers. \n",
+    "1) In your `my_functions.py` file, create a function called `gauss_elim` to compute the equivalent triangular system. Note that the algorithm shown above uses the function `permut`, receives the matrix `A` and the vector `y` and returns two numpy arrays containing the equivalent triangular system, as well as the Gauss multipliers. \n",
     "\n",
-    "2) Create a first test in your `test_my_functions.py` file. For this test, create a linear system and the associated equivalent triangular system (do not use the function implemented in item 1). Then use the function implemented in item 1 to compute an equivalent triangular system. Finally, compare the true and the computed triangular system. They must be equal to each other.\n",
+    "2) Create a first test in your `test_my_functions.py` file. For this test, create a linear system and the associated equivalent triangular system (do not use the function `gauss_elim`!). Then use the function `gauss_elim` to compute an equivalent triangular system. Finally, compare the true and the computed triangular system. They must be equal to each other.\n",
     "\n",
-    "3) Create a second test in your `test_my_functions.py` file. In this test, create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the function created in item 1 to compute the equivalent triangular system. Use one of your functions to compute a vector `x1` by solving the equivalent triangular system. Finally, compare the computed vector `x1` and the expected vector `x0`.\n",
+    "3) Create a second test in your `test_my_functions.py` file. In this test, create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the function `gauss_elim` to compute the equivalent triangular system. Use one of your functions to compute a vector `x1` by solving the equivalent triangular system. Finally, compare the computed vector `x1` and the expected vector `x0`.\n",
     "\n",
     "4) In your `test_my_functions.py` file, create a test for the function `permut` presented above. For this test, create a reference input and a reference output. Then, compare the result produced by the function `permut` and the reference output."
    ]
@@ -701,7 +701,7 @@
     "collapsed": true
    },
    "source": [
-    "Sometimes, we need to calculate the inverse of a matrix. The inverse of a $N \\times N$ matrix $\\mathbf{A}$ is commonly represented by $\\mathbf{A}^{-1}$. The inverse satisfies the following property:"
+    "Sometimes, we need to calculate the inverse of a matrix. The inverse of a $N \\times N$ matrix $\\mathbf{A}$ is commonly represented by $\\mathbf{A}^{-1}$. The inverse satisfies:"
    ]
   },
   {
@@ -766,7 +766,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This equation shows that each column of the inverse matrix $\\mathbf{A}^{-1}$ can be calculated by solving a linear system."
+    "This equation shows that each column of the inverse matrix $\\mathbf{A}^{-1}$ can be calculated by solving an independent linear system."
    ]
   },
   {
@@ -780,9 +780,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) In your `my_functions.py` file, create a function to compute the inverse of a matrix. The code must receive a matrix `A` and calculate its inverse `Ainv`, column by column, according to the scheme presented above.\n",
+    "1) In your `my_functions.py` file, create a function called `mat_inverse` to compute the inverse of a real matrix. The code must receive a matrix `A` and calculate its inverse `Ainv`, column by column, according to the scheme presented above.\n",
     "\n",
-    "2) Create two tests in your `test_my_functions.py` file. In the first test, create a matrix `A`, compute its inverse `Ainv` by using the function created in the previous item and verify if the products dot(A, Ainv) and dot(Ainv, A) are equal to the identity matrix. The second test must compare the inverse matrix computed by using your function and the inverse matrix computed by using the routine [`numpy.linalg.inv`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.inv.html). "
+    "2) Create two tests in your `test_my_functions.py` file. In the first test, create a matrix `A`, compute its inverse `Ainv` by using the function `mat_inverse` and verify if the products `A Ainv` and `Ainv A` are equal to the identity matrix. The second test must compare the inverse matrix computed by using `mat_inverse` and the inverse matrix computed by using the routine [`numpy.linalg.inv`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.inv.html). "
    ]
   },
   {
@@ -894,21 +894,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
